[gd_scene load_steps=11 format=3 uid="uid://bn8amqyq21uwq"]

[ext_resource type="Texture2D" uid="uid://3237kmya4lxc" path="res://art/enemyFlyingAlt_1.png" id="1_0l2mu"]
[ext_resource type="Script" path="res://mob/mob.gd" id="1_tbpc0"]
[ext_resource type="Texture2D" uid="uid://dy084nfvm7kxq" path="res://art/enemyFlyingAlt_2.png" id="2_4x7p7"]
[ext_resource type="Texture2D" uid="uid://cly353a2timdv" path="res://art/enemySwimming_1.png" id="3_364e4"]
[ext_resource type="Texture2D" uid="uid://cxgsaam7l1a6s" path="res://art/enemySwimming_2.png" id="4_4d5kp"]
[ext_resource type="Texture2D" uid="uid://c38rhnnrb8nv5" path="res://art/enemyWalking_1.png" id="5_4d0xe"]
[ext_resource type="Texture2D" uid="uid://2t7sv77o2qx6" path="res://art/enemyWalking_2.png" id="6_rh4ti"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x1r7x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0l2mu")
}, {
"duration": 1.0,
"texture": ExtResource("2_4x7p7")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_364e4")
}, {
"duration": 1.0,
"texture": ExtResource("4_4d5kp")
}],
"loop": true,
"name": &"swim",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4d0xe")
}, {
"duration": 1.0,
"texture": ExtResource("6_rh4ti")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wnypd"]
radius = 23.0
height = 64.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_prv7y"]
vertices = PackedVector2Array(1778, -80, 1779, 970, -121, 975, -121, -84)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-131, -95, 1788, -90, 1790, 980, -131, 986)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Mob" type="RigidBody2D" groups=["mobs"]]
position = Vector2(130, 91)
collision_layer = 0
collision_mask = 4
gravity_scale = 0.0
script = ExtResource("1_tbpc0")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_x1r7x")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wnypd")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="VelocityDirection" type="Line2D" parent="."]

[node name="MobDashTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="MobDashCoolDownTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_prv7y")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="MobDashTimer" to="." method="_on_mob_dash_timer_timeout"]
[connection signal="timeout" from="MobDashCoolDownTimer" to="." method="_on_mob_dash_cool_down_timer_timeout"]
